--- a/src/components/Playground/components/RandomKeys/components/RandomArrows/RandomArrows.module.css
+++ b/src/components/Playground/components/RandomKeys/components/RandomArrows/RandomArrows.module.css
@@ -1,11 +1,9 @@
-.icon {
-  background-color: #e4e4e4;
-}
-
 .iconSuccess {
-  background-color: #4fd79a;
+  border: 1px solid var(--color-green);
+  background-color: var(--color-green-light);
 }
 
 .iconFail {
-  background-color: #d58b8b;
+  border: 1px solid var(--color-red-light);
+  background-color: var(--color-red-lighter);
 }
